--- a/diary/post1.mdx
+++ b/diary/post1.mdx
@@ -1,7 +1,8 @@
 ---
 title: "Post1"
-date: "2023-09-15"
+date: "2023-11-11"
 slug: "post1"
 ---
 
-Esse é o post 1
+Estamos na faze de Alpha testes do jogo "O bruxeiro"
+
