--- a/diary/post1.mdx
+++ b/diary/post1.mdx
@@ -4,5 +4,5 @@ date: "2023-11-11"
 slug: "post1"
 ---
 
-Estamos na faze de Alpha testes do jogo "O bruxeiro"
+Estamos na fase de Alpha testes do jogo "O bruxeiro"
 
